<?xml version="1.0"?>
<package format="2">

  <name>robor_utilities</name>
  <version>1.0.0</version>
  <description>Various utilities for Robor project.</description>
  <maintainer email="mateusz.przybyla@put.poznan.pl">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>joy</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>nodelet</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
